# GenshinWishSimulator

./: LICENSE  README.md  scrape.py
bot/: Cargo.toml
bot/src/: items.json  main.rs  rolls.rs
